Converted all tabs to spaces

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 // All variables
 @import "partials/variables";
 
+// Partials
 @import "partials/reset";
 @import "partials/typography";
 @import "partials/borders";
