--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -1,34 +1,30 @@
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; 
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; 
 }
 
 html, body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .grid {
-    margin: 0 0 $space 0;
+  margin: 0 0 $space 0;
 
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 [class*='col-'] {
-    float: left;
-    padding: 0 $space*.75;
-    .grid &:last-of-type {
-        padding-right: 0;
-    }
+  float: left;
+  padding: 0 $space*.75;
 
-    .grid &:first-of-type {
-        padding-left: 0;
-    }
+  .grid &:last-of-type { padding-right: 0; }
+  .grid &:first-of-type { padding-left: 0; }
 }
 
 .col-flush { padding-right:0; }
@@ -40,27 +36,25 @@ html, body {
 .col-1-8 { width: 12.5%; }
 
 @media all and (max-width: 768px)  {
-    [class*='col-'] {
-        width:100%;
-        float:none;
-        display:block;
-        padding:0;
-        margin-bottom:$space;
-        text-align:center;
-    }
+  [class*='col-'] {
+    width:100%;
+    float:none;
+    display:block;
+    padding:0;
+    margin-bottom:$space;
+    text-align:center;
+  }
 
-    [class*='col-'] .float-right {
-        float:none;
-    }
+  [class*='col-'] .float-right { float:none; }
 
-    .col-flush {  margin-bottom:0; }
+  .col-flush {  margin-bottom:0; }
 }
 
 hr {
-    border:0;
-    height:1px;
-    background:$light-gray;
-    margin:$space*2 0;
+  border:0;
+  height:1px;
+  background:$light-gray;
+  margin:$space*2 0;
 }
 
 .float-left { float:left; }
